--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 ---
-layout: default
+layout: default 
 title: corderophilosophy.com
 ---
+
 <div class="home-container">
 
-  {% include header.html %}
+    {% include header.html %}
 
-  <div class="home-sections">
+    <div class="home-sections">
 
-    <!-- all the sections here -->
-    <div style="height: 1000px"></div>
+        {% include columns.html %}
+        <!-- all the sections here -->
+        <div style="height: 1000px"></div>
 
-  </div>
+
+    </div>
 
 </div>
 
