Begin building hero section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default 
+layout: default
 title: corderophilosophy.com
 ---
 
@@ -9,7 +9,9 @@ title: corderophilosophy.com
 
     <div class="home-sections">
 
+        {% include section-about.html %}
         {% include columns.html %}
+
         <!-- all the sections here -->
         <div style="height: 1000px"></div>
 
