--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: corderophilosophy.com
 
     <div class="home-sections">
 
-        {% include section-about.html %}
+        {% include sections-about.html %}
         {% include columns.html %}
 
         <!-- all the sections here -->
