Build Writing Section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ title: corderophilosophy.com
     <div class="home-sections">
 
         {% include sections-about.html %}
+        {% include sections-writing.html %}
         {% include columns.html %}
 
         <!-- all the sections here -->
