Reorganize writing section flex-grid

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ title: corderophilosophy.com
 
         {% include sections-about.html %}
         {% include sections-writing.html %}
+        {% include sections-projects.html %}
         {% include columns.html %}
 
         <!-- all the sections here -->
