Add contact section

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@ title: corderophilosophy.com
         {% include sections-about.html %}
         {% include sections-writing.html %}
         {% include sections-projects.html %}
-        {% include columns.html %}
+        {% include sections-contact.html %}
 
         <!-- all the sections here -->
-        <div style="height: 1000px"></div>
+        <!-- <div style="height: 1000px"></div> -->
 
 
     </div>
