--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@ title: corderophilosophy.com
     <div class="home-sections">
 
         {% include sections-about.html %}
-        {% include sections-writing.html %}
+        {% include sections-blog.html %}
         {% include sections-projects.html %}
         {% include sections-contact.html %}
+        {% include columns.html %}
 
         <!-- all the sections here -->
         <!-- <div style="height: 1000px"></div> -->
