--- a/index.html
+++ b/index.html
@@ -17,3 +17,5 @@ title: corderophilosophy.com
     </div>
 
 </div>
+<script type="text/javascript" src="{{site.url}}/assets/js/homefunctions.js">
+</script>
