Integrate Tachyons_CSS. Add title. Mock home.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@ title: corderophilosophy.com
     {% include header.html %}
 
     <div class="home-sections">
+      {% include title.html %}
+      {% include columns.html %}
+      {% include footer.html %}
 
     </div>
 
