Finish section.blog. Begin section.projects.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ title: corderophilosophy.com
 
     <div class="home-sections">
       {% include title.html %}
-      {% include columns.html %}
+      {% include blog.html %}
+      {% include projects.html %}
       {% include footer.html %}
 
     </div>
